<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_record_start" 
		android:icon="@drawable/menu_record"
		android:title="Record"/>
	<item android:id="@+id/menu_replay_start" 
		android:icon="@drawable/menu_replay_start"
		android:title="@string/replay"/>
<!--	<item android:id="@+id/menu_remote_start" -->
<!--		android:icon="@drawable/menu_remote_start"-->
<!--		android:title="@string/receive"/>-->
<!--        <item android:id="@+id/menu_broadcast_start" -->
<!--		android:icon="@drawable/menu_broadcast_start"-->
<!--		android:title="@string/transmit"/>-->
<!--        <item android:id="@+id/menu_broadcast_stop" -->
<!--		android:icon="@drawable/menu_broadcast_stop"-->
<!--		android:title="@string/transmit"/>-->
	<item android:id="@+id/menu_replay_stop" 
		android:icon="@drawable/menu_replay_stop"
		android:visible="false"
		android:title="@string/stop"/>
	<item android:id="@+id/menu_replay_share" 
		android:icon="@android:drawable/ic_menu_share"
		android:visible="false"
		android:title="@string/share"/>
	<item android:id="@+id/menu_settings" 
		android:icon="@android:drawable/ic_menu_preferences"
		  android:title="@string/settings"/>
	<item android:id="@+id/menu_about"
		android:icon="@android:drawable/ic_menu_info_details"
		android:title="@string/about"/>
</menu>
